syntax = "proto3";

package grpc.v2.tag_pb;
import "common.proto";

service TagService {
  rpc GetTagList (GetTagListRequest) returns (GetTagListReply) {}
}

message GetTagListRequest {
  string name = 1;
  uint32 state = 2;
}

message Tag {
  int64 id = 1;
  string name = 2;
  uint32 state = 3;
}

message GetTagListReply {
  repeated Tag list = 1;
  common_pb.Pager pager = 2;
}